[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Player/InteractionComponent.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 10.0

[node name="InteractionComponent" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 0 )
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_InteractionComponent_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_InteractionComponent_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_InteractionComponent_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_InteractionComponent_body_exited"]
